eks_infra/kube_yaml/acme-solver_ingressclass.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: acme-solver
spec:
  # This class is controlled by the AWS Load Balancer Controller
  controller: ingress.k8s.aws/alb
