eks_infra/kube_yaml/genai01_ns_pvc.yaml
# 1. A namespace to keep our test resources tidy
apiVersion: v1
kind: Namespace
metadata:
  name: chatai
  # Add a label for Velero to easily find and back up this namespace
  # labels:
  #   backup-by: velero
