eks_infra/kube_yaml/ollama01_ns_pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
