eks_infra/kube_yaml/tool00_pgadmin.yaml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: tools # Or any namespace you prefer for pgAdmin


# ---
# allowVolumeExpansion: true 
# apiVersion: storage.k8s.io/v1
# kind: StorageClass
# metadata:
#   name: efs-tools-pgadminretain-sc # You can name it anything you like
# provisioner: efs.csi.aws.com # For CSI driver
# parameters:
#   directoryPerms: "700"
#   fileSystemId: fs-09493cc317eca89d8
#   provisioningMode: efs-ap
# reclaimPolicy: Retain # <-- THIS IS THE IMPORTANT PART FOR DATA PROTECTION
# volumeBindingMode: WaitForFirstConsumer  # Recommended for EBS


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: genai
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
      annotations:
        backup.velero.io/backup-volumes: pgadmin-data
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest # Or a specific version e.g., dpage/pgadmin4:8.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80 # Must match PGADMIN_LISTEN_PORT
              protocol: TCP
          volumeMounts:
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin # pgAdmin stores its data here
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m" # 0.25 CPU core
            limits:
              memory: "1Gi"
              cpu: "1" # 1 CPU core
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-efs-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: genai
  labels:
    app: pgadmin

spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 80 # The port the service will listen on (and the Load Balancer)
      targetPort: http # Matches the 'name' of the containerPort in the Deployment
