eks_infra/kube_yaml/genai04_clean_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-ingress
  namespace: genai
  annotations:
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:806342426990:certificate/b630eaf0-26e0-429c-9ca5-072e7f71477b
    # alb.ingress.kubernetes.io/group.name: "mmh-sg-iha-alb" 
    # --- BARE MINIMUM ANNOTATIONS ---
    # Tell cert-manager which issuer to use
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    
    # Define the ALB scheme and target type
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  # Use the 'alb' IngressClass
  ingressClassName: alb

  # This is the standard way to request TLS termination
  # tls:
  #   - hosts:
  #     - chatai.api.mmh-global.com
  #     secretName: api-mmh-global-com-staging-tls

  # Define the routing rule
  rules:
    - host: chatai.api.mmh-global.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui-svc
                port:
                  number: 80
